# backend

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  prometeus.yml  requirements.txt
auth-service/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
auth-service/app/: main.py
auth-service/app/api/: rest_handler.py
auth-service/app/db/: database.py
auth-service/app/models/: models.py  schemas.py
auth-service/app/services/: user_service.py
auth-service/init_db/: init.sql
auth-service/src/: grpc_handler.py  main.py  models.py  rest_handler.py  user_service.py  users_pb2.py  users_pb2_grpc.py
auth-service/src/proto/: users.proto
comments_and_reviews/: .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
comments_and_reviews/app/: main.py
comments_and_reviews/app/api/v1/: metrics.py
comments_and_reviews/app/core/: config.py  security.py
comments_and_reviews/app/db/: __init__.py
comments_and_reviews/app/db/mongo/: init.py
comments_and_reviews/app/db/redis/: init.py
comments_and_reviews/app/dependencies/: actor.py  services_factory.py
comments_and_reviews/app/events/: consume_events.py  event_handlers_mapper.py  router.py
comments_and_reviews/app/events/handlers/: __init__.py  base.py  reviews.py
comments_and_reviews/app/events/schemas/: event.py  review.py
comments_and_reviews/app/kafka/: __init__.py  events_consumer.py  events_producer.py  get_kafka.py
comments_and_reviews/app/models/: Base.py  ModerationRequest.py  Review.py  Reviewable.py  User.py  actor.py  base.py  moderation_request.py  review.py  reviews_statistics.py  user.py
comments_and_reviews/app/repositories/: moderation_request_repository.py  moderation_requests_repository.py  products_repository.py  reviews_repository.py  reviews_statistics_repository.py  stores_repository.py  users_repository.py
comments_and_reviews/app/services/: __init__.py  product_reviews_service.py  reviews_interactions_service.py  reviews_moderation_service.py  reviews_service.py  reviews_statistics_service.py  services_factory.py
comments_and_reviews/tests/: conftest.py
comments_and_reviews/tests/services/: conftest.py  test_reviews_service.py
(+117 files in other folders)
