[project]
name = "comments-and-reviews-service"
version = "0.1.0"
description = ""
authors = [{ name = "Kirill Shipilov", email = "shipilovk04@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pottery (>=3.0.1,<4.0.0)",
    "confluent-kafka (>=2.10.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "prometheus-client (>=0.22.0,<0.23.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]


[tool.poetry]
packages = [{ include = "app" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
faker = "^37.1.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
